fix extra margin on product section

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,10 @@ a.nav-link {
   color: whitesmoke;
 }
 
+.products .row {
+  margin: 0;
+}
+
 .products h2 {
   font-family: 'Kalam', cursive;
   background: url(assets/images/background/project-title.png) no-repeat center center;
@@ -491,7 +495,7 @@ a.nav-link {
     font-size: 1.2rem;
   }
   .products video {
-    max-width: 90%;
+    max-width: 95%;
   }
 }
 
